dev: implement manual input gemini api key

--- a/index.html
+++ b/index.html
@@ -7,6 +7,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Penerjemah Arab & Ahli Nahwu</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+      @keyframes ellipsis {
+        0%, 20% {
+          opacity: 0;
+        }
+        50% {
+          opacity: 1;
+        }
+        100% {
+          opacity: 0;
+        }
+      }
+      @keyframes fadeInOut {
+        0% {
+          opacity: 0.4;
+          transform: scale(0.98);
+        }
+        50% {
+          opacity: 1;
+          transform: scale(1);
+        }
+        100% {
+          opacity: 0.4;
+          transform: scale(0.98);
+        }
+      }
+    </style>
   <script type="importmap">
 {
   "imports": {
